--- a/src/sections/Seven/styles.scss
+++ b/src/sections/Seven/styles.scss
@@ -25,6 +25,7 @@
       background: url('../../assets/overlays/pixel_overlay_seven.svg') repeat-x;
     }
     div {
+      height: 100px;
       display: flex;
       flex-direction: row;
       justify-content: center;
